--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,31 +1,161 @@
-.navbar{
-    background: black !important;
+#navbar {
+    background-color: black !important;
     opacity: 1 !important;
-    .main-nav{
-        a{
+
+    .main-nav {
+        a {
             color: white;
         }
     }
-    .navbar-nav{
+
+    .header__social-link{
+        display: none;
+    }
+
+    .navbar-nav {
         align-items: center;
         gap: 1.8rem;
-        .search-index{
+
+        a {
+            transition: .4s ease-in-out;
+
+            &:hover {
+                color: #EF9700;
+            }
+        }
+
+        .search-index {
             padding-right: 70px;
-            svg{
+
+            svg {
                 cursor: pointer;
                 color: white;
             }
         }
 
-        .social-link{
+        .social-link {
             display: flex;
             gap: 1.4rem;
-            img,svg{
+
+            img,
+            svg {
                 cursor: pointer;
             }
-            svg{
+
+            svg {
                 color: white;
             }
+        }
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .header__social-link {
+        width: 57%;
+        text-align: end;
+        display: flex;
+        justify-content: end;
+        gap: 1rem;
+        display: block;
+
+        svg {
+            width: 1rem;
+            height: 1rem;
+            color: white;
+        }
+    }
+
+    .navbar-toggler{
+        border: none !important;
+        border-radius: 0px !important;
+
+        &:focus{
+            border: none;
+            border-radius: 0px;
+            box-shadow: none !important;
+        }
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 768px) {
+    .header__social-link {
+        width: 57% !important;
+        text-align: end;
+        display: flex;
+        justify-content: end;
+        gap: 1rem;
+        display: block;
+        svg {
+            width: 1rem;
+            height: 1rem;
+            color: white;
+        }
+    }
+
+    .navbar-toggler{
+        border: none !important;
+        border-radius: 0px !important;
+
+        &:focus{
+            border: none;
+            border-radius: 0px;
+            box-shadow: none !important;
+        }
+    }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    .header__social-link {
+        width: 82% !important;
+        text-align: end;
+        display: flex;
+        justify-content: end;
+        gap: 1rem;
+        display: block;
+
+        svg {
+            width: 1rem;
+            height: 1rem;
+            color: white;
+        }
+    }
+
+    .navbar-toggler{
+        border: none !important;
+        border-radius: 0px !important;
+
+        &:focus{
+            border: none;
+            border-radius: 0px;
+            box-shadow: none !important;
+        }
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    .header__social-link {
+        width: 82% !important;
+        text-align: end;
+        display: flex;
+        justify-content: end;
+        gap: 1rem;
+
+        svg {
+            width: 1rem;
+            height: 1rem;
+            color: white;
+        }
+    }
+
+    .navbar-toggler{
+        border: none !important;
+        border-radius: 0px !important;
+
+        &:focus{
+            border: none;
+            border-radius: 0px;
+            box-shadow: none !important;
         }
     }
 }
