--- a/src/styles/wine-card.scss
+++ b/src/styles/wine-card.scss
@@ -1,16 +1,28 @@
 .wine-card {
     background: #F4E5D4;
 
+    .slick-slide{
+        transform: scale(0.8) !important;
+        transition: .5s ease-in-out;
+    }
+
+    .slick-current{
+        transform: scale(1) !important;
+    }
+
     .slick-prev{
         filter: brightness(0) saturate(100%) invert(72%) sepia(79%);
         width: 2rem;
         height: 2rem;
+        left: 35px;
+        z-index: 11111111111111;
     }
 
     .slick-next{
         filter: brightness(0) saturate(100%) invert(72%) sepia(79%);
         width: 2rem;
         height: 2rem;
+        right: 35px;
     }
 
     .slick-slide{
@@ -68,7 +80,7 @@
 }
 
     .section-title {
-        font-family: 'Arno Pro';
+        font-family: 'Arno Pro',sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 55px;
@@ -80,5 +92,26 @@
 
     .wine__card-index{
         padding-top: 50px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .wine-card{
+        margin-top: -70px;
+
+        .section-title{
+            font-size: 34px;
+        }
+
+        .slick-prev,.slick-next{
+            filter: brightness(0) saturate(100%) invert(29%) sepia(90%) saturate(448%) hue-rotate(337deg) brightness(98%) contrast(91%);
+        }
+
+        .slick-prev{
+            left: 17px;
+        }
+        .slick-next{
+            right: 17px;
+        }
     }
 }
