--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,12 @@
 #navbar {
     background-color: black !important;
     opacity: 1 !important;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 111111111111;
 
     .main-nav {
         a {
