Updated contact page

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -72,9 +72,36 @@
   margin: auto;
   display: flex;
   flex-wrap: wrap;
+  padding-top: 10px;
+  padding-bottom: 135px;
 }
 .contact-form .input-form {
-  background: white;
+  background: #FFFAEF;
+  margin-bottom: 20px;
   width: 46%;
   margin-right: 20px;
+}
+.contact-form .textarea {
+  width: 100% !important;
+}
+.contact-form .textarea label {
+  padding-left: 0 !important;
+}
+.contact-form label {
+  padding-left: 10px !important;
+}
+.contact-form .submit-btn {
+  width: 100%;
+  text-align: center;
+  padding-top: 6px;
+}
+.contact-form .submit-btn button {
+  color: #974D24;
+  border: 1px solid #974D24;
+  transition: 0.5s ease-in-out;
+  width: 30%;
+}
+.contact-form .submit-btn button:hover {
+  background: #974D24;
+  color: white;
 }/*# sourceMappingURL=contact.css.map */
