--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -39,7 +39,7 @@
             padding-left: 40px;
             padding-right: 20px;
 
-            &:last-child{
+            &:last-child {
                 border: none;
             }
 
@@ -57,7 +57,7 @@
 
             a {
                 color: black;
-                font-family: 'Mondia',sans-serif;
+                font-family: 'Mondia', sans-serif;
                 font-style: normal;
                 font-weight: 400;
                 font-size: 18px;
@@ -69,19 +69,54 @@
     }
 }
 
-.contact-form{
+.contact-form {
     background: #F4E5D4;
-    form{
+
+    form {
         text-align: center;
         max-width: 610px;
         width: 100%;
         margin: auto;
         display: flex;
         flex-wrap: wrap;
+        padding-top: 10px;
+        padding-bottom: 135px;
     }
-    .input-form{
-        background: white;
+
+    .input-form {
+        background: #FFFAEF;
+        margin-bottom: 20px;
         width: 46%;
         margin-right: 20px;
+    }
+
+    .textarea {
+        width: 100% !important;
+
+        label{
+            padding-left: 0 !important;
+        }
+    }
+
+    label {
+        padding-left: 10px !important;
+    }
+
+    .submit-btn {
+        width: 100%;
+        text-align: center;
+        padding-top: 6px;
+
+        button {
+            color: #974D24;
+            border: 1px solid #974D24;
+            transition: .5s ease-in-out;
+            width: 30%;
+
+            &:hover {
+                background: #974D24;
+                color: white;
+            }
+        }
     }
 }
