--- a/src/styles/price-location.scss
+++ b/src/styles/price-location.scss
@@ -2,6 +2,10 @@
     background: #F4E5D4;
     display: flex;
 
+    .page-head{
+        display: none;
+    }
+
     ::-webkit-scrollbar {
         width: 5px;
     }
@@ -25,13 +29,9 @@
     }
 
 
-
-
     .col-lg-4 {
         max-height: 489px;
         overflow-y: scroll;
-
-
     }
 
     .location-card {
@@ -69,8 +69,113 @@
         .location-btn {
             text-decoration: underline !important;
             color: black;
-            width: 70%;
+            display: block;
+            width: 100%;
             text-align: end;
+        }
+    }
+}
+
+
+@media screen and (max-width: 576px) {
+    .map__main{
+        .page-head{
+            display: block;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            text-align: center;
+            color: rgb(220, 148, 108);
+            width: 100%;
+            font-size: 32px;
+            line-height: 34px;
+            text-align: center;
+            letter-spacing: 0.03em;
+            font-weight: bold;
+            font-family: 'arno-pro-regular','sans-serif';
+        }
+        .title{
+            font-size: 18px !important;
+        }
+        .text{
+            font-size: 14px !important;
+        }
+        iframe{
+            width: 100%;
+            height: 500px;
+        }
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 768px) {
+    .map__main{
+        .page-head{
+            display: block;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            text-align: center;
+            color: rgb(220, 148, 108);
+            width: 100%;
+            font-size: 32px;
+            line-height: 34px;
+            text-align: center;
+            letter-spacing: 0.03em;
+            font-weight: bold;
+            font-family: 'arno-pro-regular','sans-serif';
+        }
+        .title{
+            font-size: 18px !important;
+        }
+        .text{
+            font-size: 14px !important;
+        }
+        iframe{
+            width: 100%;
+            height: 500px;
+        }
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    .map__main{
+        .page-head{
+            display: block;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            text-align: center;
+            color: rgb(220, 148, 108);
+            width: 100%;
+            font-size: 32px;
+            line-height: 34px;
+            text-align: center;
+            letter-spacing: 0.03em;
+            font-weight: bold;
+            font-family: 'arno-pro-regular','sans-serif';
+        }
+        .title{
+            font-size: 18px !important;
+        }
+        .text{
+            font-size: 14px !important;
+        }
+        iframe{
+            width: 100%;
+            height: 500px;
+        }
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    .map__main{
+        iframe{
+            width:645px;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px)  {
+    .map__main{
+        iframe{
+            width: 850px;
         }
     }
 }
